--- a/DynamicAutomation/pom.xml
+++ b/DynamicAutomation/pom.xml
@@ -36,5 +36,18 @@
     <version>5.2.3</version>
 </dependency>
 
+<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.6.2</version>
+</dependency>
+		
+<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+</dependency>
+
+
 </dependencies>
 </project>
