--- a/DynamicAutomation/pom.xml
+++ b/DynamicAutomation/pom.xml
@@ -48,6 +48,25 @@
 			<version>8.0.27</version>
 </dependency>
 
+<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.9</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.19.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.19.0</version>
+</dependency>
+
+
 
 </dependencies>
 </project>
