--- a/DynamicAutomation/pom.xml
+++ b/DynamicAutomation/pom.xml
@@ -66,6 +66,18 @@
     <version>2.19.0</version>
 </dependency>
 
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>7.11.1</version>
+</dependency>
+
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.11.1</version>
+</dependency>
+
 
 
 </dependencies>
