--- a/DynamicAutomation/pom.xml
+++ b/DynamicAutomation/pom.xml
@@ -20,7 +20,7 @@
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.4.0</version>
+    <version>7.7.0</version>
     <scope>test</scope>
 </dependency>
 
@@ -77,7 +77,12 @@
     <artifactId>cucumber-testng</artifactId>
     <version>7.11.1</version>
 </dependency>
-
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.9.0</version>
+        <scope>compile</scope>
+    </dependency>
 
 
 </dependencies>
